fixed lower bound color cutoff issue

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
 .sapMGlobalBackgroundColor,
 .sapUiGlobalBackgroundColor {
   background-color: none !important;
-  background-image: linear-gradient(45deg, #a9e5ef, white) !important;
+  background-image: linear-gradient(#4c3c92, #4c368f) !important;
   background-repeat: no-repeat !important;
 }
 
